# CreditRiskClassifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: data_cfg.py  model_cfg.py
notebooks/: eda.ipynb
reports/: full_report.json  metrics.json
src/: preprocessing.py  train.py
tests/: test_pipeline.py
