[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-classifier"
version = "0.1.0"
authors = [
  { name = "Leo Freitas"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "joblib",
    "xgboost"
]

[project.optional-dependencies]
dev = [
    "pytest",
]